test/types/file/unableToOpenFile.chpl
use IO;

var f = open("_test_cannotOpenMe.txt", ioMode.r);

f.close();
